# mlops

./: Makefile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  makefile.yml
