[tool.poetry]
name = "mlops-with-mlflow"
version = "0.1.0"
description = ""
authors = ["bright <brbojr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
